Tests Fixes